Fix: util function concatList now without destroying side effect on input list